compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__lists__empty_list.snap
---
source: compiler-core/src/erlang/tests/lists.rs
expression: "\npub fn main() {\n  []\n}\n"
---
----- SOURCE CODE

pub fn main() {
  []
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> list(any()).
main() ->
    [].
