compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__lists__list_with_spread.snap
---
source: compiler-core/src/erlang/tests/lists.rs
expression: "\npub fn main() {\n  let a = [3, 2, 1]\n  [5, 4, ..a]\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let a = [3, 2, 1]
  [5, 4, ..a]
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> list(integer()).
main() ->
    A = [3, 2, 1],
    [5, 4 | A].
